=== Version 0.7.1
* Enhancements
  * Added the following aliased methods to their corresponding Accessors method
	a => link
  * Added the following methods to return generic Element objects
	abbr
	address
	article
	aside
	bdi
	bdo
	cite
	code
	dd
	dfn
	dt
	em
	figcaption
	figure
	footer
	header
	hgroup
	kbd
	mark
	nav
	noscript
	rp
	rt
	ruby
	samp
	section
	sub
	summary
	sup
	var
	wbr

=== Version 0.7.0 / 2012-6-30
* Enhancements
  * Updated Table [] method to return a row that has matching partial text in any column (Thanks George Shakhnazaryan)
  * Updated TableRow [] method to return column that matching partial text in any column (Thanks George Shakhnazaryan)
  * Added if_page to PageFactory (Thanks Gregory Shayko)
  * Added index_property for accessing sets of related fields (Thanks robkid)
  * Updated to use selenium-webdriver 2.24.0


=== Version 0.6.9 / 2012-6-12
* Enhancements
  * Added select_value method to SelectList
  * Updated link to be able to identify by title
  * Updated div to be able to identify by title
  * Updated text_field to be able to identify by text and label
  * Updated to use selenium-webdriver 2.22.2
* Fixes
  * Fixed populate_page_with to work with text areas (Thanks ramyav85)

=== Version 0.6.8 / 2012-6-3
* Enhancements
  * Updated [] method on Table to return nil when bad row header is provided
  * Updated [] method on TableRow to return nil when bad column header is provided
  * Updated to use watir-webdriver 0.6.1
  * Updated to use selenium-webdriver 2.22.1
* Fixes
  Modified text area methods so it clears before setting new text
  Fixed clear method on SelectList when using Selenium to clear multi selects

=== Version 0.6.7 / 2012-5-16
* Enhancements
  * Added flash method to Element to temporarily change the background color
  * Added when_not_present method to Element
  * Added default override for page level waits - PageObject.default_page_wait