@@ -163,6 +163,7 @@ module PageObject
       end
       alias_method "#{name}_hidden_field".to_sym, "#{name}_element".to_sym
     end
+    alias_method :hidden, :hidden_field
 
     #
     # adds four methods to the page object - one to set text in a text area,
@@ -203,6 +204,7 @@ module PageObject
       end
       alias_method "#{name}_text_area".to_sym, "#{name}_element".to_sym
     end
+    alias_method :textarea, :text_area
 
     #
     # adds four methods - one to select an item in a drop-down,
@@ -245,6 +247,7 @@ module PageObject
       end
       alias_method "#{name}_select_list".to_sym, "#{name}_element".to_sym
     end
+    alias_method :select, :select_list
 
     #
     # adds three methods - one to select a link, another
@@ -285,8 +288,8 @@ module PageObject
         platform.link_for(identifier.clone).exists?
       end
       alias_method "#{name}_link".to_sym, "#{name}_element".to_sym
-      alias_method :a, :link
     end
+    alias_method :a, :link
 
     #
     # adds five methods - one to check, another to uncheck, another
@@ -380,6 +383,7 @@ module PageObject
       end
       alias_method "#{name}_radio_button".to_sym, "#{name}_element".to_sym
     end
+    alias_method :radio, :radio_button
 
     #
     # adds three methods - one to click a button, another to
@@ -556,6 +560,7 @@ module PageObject
       end
       alias_method "#{name}_cell".to_sym, "#{name}_element".to_sym
     end
+    alias_method :td, :cell
 
     #
     # adds two methods - one to retrieve the image element, and another to
@@ -588,6 +593,7 @@ module PageObject
       end
       alias_method "#{name}_image".to_sym, "#{name}_element".to_sym
     end
+    alias_method :img, :image
 
     #
     # adds two methods - one to retrieve the form element, and another to
@@ -653,6 +659,7 @@ module PageObject
       end
       alias_method "#{name}_list_item".to_sym, "#{name}_element".to_sym
     end
+    alias_method :li, :list_item
 
     #
     # adds two methods - one to retrieve the unordered list element, and another to
@@ -683,6 +690,7 @@ module PageObject
       end
       alias_method "#{name}_unordered_list".to_sym, "#{name}_element".to_sym
     end
+    alias_method :ul, :unordered_list
 
     #
     # adds two methods - one to retrieve the ordered list element, and another to
@@ -713,6 +721,7 @@ module PageObject
       end
       alias_method "#{name}_ordered_list".to_sym, "#{name}_element".to_sym
     end
+    alias_method :ol, :ordered_list
 
     #
     # adds three methods - one to retrieve the text of a h1 element, another to
@@ -951,6 +960,7 @@ module PageObject
       end
       alias_method "#{name}_paragraph".to_sym, "#{name}_element".to_sym
     end
+    alias_method :p, :paragraph
 
     #
     # adds three methods - one to set the file for a file field, another to retrieve
